@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2025, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,12 +23,14 @@
 
 /*
  * @test
- * @bug 8359412
+ * @bug 8359412 8370922 8369699
+ * @key randomness
  * @summary Demonstrate the use of Expressions from the Template Library.
  * @modules java.base/jdk.internal.misc
+ * @modules jdk.incubator.vector
  * @library /test/lib /
  * @compile ../../../compiler/lib/verify/Verify.java
- * @run main template_framework.examples.TestExpressions
+ * @run main ${test.main.class}
  */
 
 package template_framework.examples;
@@ -36,6 +38,8 @@ package template_framework.examples;
 import java.util.List;
 import java.util.ArrayList;
 import java.util.Set;
+import java.util.Random;
+import jdk.test.lib.Utils;
 
 import compiler.lib.compile_framework.*;
 import compiler.lib.template_framework.Template;
@@ -47,6 +51,8 @@ import compiler.lib.template_framework.library.Operations;
 import compiler.lib.template_framework.library.TestFrameworkClass;
 
 public class TestExpressions {
+    private static final Random RANDOM = Utils.getRandomInstance();
+
     public static void main(String[] args) {
         // Create a new CompileFramework instance.
         CompileFramework comp = new CompileFramework();
@@ -55,10 +61,14 @@ public class TestExpressions {
         comp.addJavaSourceCode("p.xyz.InnerTest", generate(comp));
 
         // Compile the source file.
-        comp.compile();
+        comp.compile("--add-modules=jdk.incubator.vector");
 
         // p.xyz.InnterTest.main(new String[] {});
-        comp.invoke("p.xyz.InnerTest", "main", new Object[] {new String[] {}});
+        comp.invoke("p.xyz.InnerTest", "main", new Object[] {new String[] {
+            "--add-modules=jdk.incubator.vector",
+            "--add-opens", "jdk.incubator.vector/jdk.incubator.vector=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+        }});
     }
 
     // Generate a Java source file as String
@@ -121,7 +131,17 @@ public class TestExpressions {
             );
         });
 
-        for (Expression operation : Operations.PRIMITIVE_OPERATIONS) {
+        // The scalar operations are very important and we would like to always test them all.
+        for (Expression operation : Operations.SCALAR_NUMERIC_OPERATIONS) {
+            tests.add(withConstantsTemplate.asToken(operation));
+        }
+
+        // There are a LOT of instructions, especially a lot of vector instructions.
+        // A bit too many to run them all in an individual test.
+        // So let's just sample some at random.
+        for (int i = 0; i < 100; i++) {
+            int r = RANDOM.nextInt(Operations.ALL_OPERATIONS.size());
+            Expression operation = Operations.ALL_OPERATIONS.get(r);
             tests.add(withConstantsTemplate.asToken(operation));
         }
 
@@ -130,7 +150,7 @@ public class TestExpressions {
             // package and class name.
             "p.xyz", "InnerTest",
             // Set of imports.
-            Set.of("compiler.lib.verify.*"),
+            Set.of("compiler.lib.verify.*", "jdk.incubator.vector.*"),
             // classpath, so the Test VM has access to the compiled class files.
             comp.getEscapedClassPathOfCompiledClasses(),
             // The list of tests.
